Extract sentence file corpus #3